# crate

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  DRAG_DROP_ISSUE.md  EXPORT_IMPLEMENTATION_PLAN.md  MOBILE_PRD.md  PAGE_REFACTORING_PLAN.md  PHASE_01.md  PHASE_02.md  PHASE_03.md  PHASE_04.md  README.md  REKORDBOX_PDB_FORMAT.md  eslint.config.js  package.json  svelte.config.js  vite.config.js  vite.config.ts
.github/: MOBILE_DISTRIBUTION.md  RELEASE_CHECKLIST.md  RELEASE_STRATEGY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: cd.docs.yml  cd.release.yml  ci.build.yml  ci.lint.yml  ci.mobile.yml  docs.deploy.yml  test.release.yml
.husky/: pre-commit
apps/desktop/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: hooks.client.ts  style.css
apps/mobile/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
docs/: .gitignore  CLAUDE_IMPLEMENTATION_GUIDE.md  PRD.md  TRD.md  astro.config.mjs  package.json  tailwind.config.mjs
docs/scripts/: sync-changelog.js
scripts/: changelog.js  fix-ios-icons.mjs  install-ios-device.mjs  tag.sh  version.js  write-cloud-config.mjs  write-ios-bundle-id.mjs  write-ios-plist.mjs  write-ios-signing.mjs  write-mobile-icons.mjs
shared/: tsconfig.json
shared/api/: analysis.ts  app.ts  backup.ts  cloudSync.ts  devices.ts  diagnostics.ts  discovery.ts  export.ts  follow.ts  index.ts  library.ts  mediaControls.ts  menu.ts  player.ts  playlists.ts  settings.ts  sync.ts  tags.ts  updater.ts
shared/components/: Slider.svelte
shared/services/: nativePreviewPlayer.ts  previewPlayer.ts  webMediaSession.ts
shared/stores/: cloudSync.ts  discovery.ts  discoveryPlaylist.ts  expandedReleases.ts  follow.ts  index.ts  playbackQueue.ts  player.ts  playlists.ts  settings.ts  tags.ts  toast.ts  ui.ts
shared/styles/: theme.css
shared/types/: index.ts
shared/utils/: artwork.ts  bulkEdit.ts  discoveryLinks.ts  dom.ts  drag.ts  follow.ts  format.ts  index.ts  platform.ts  playlist.ts  selection.ts  smartRules.ts  sorting.ts  tagComputation.ts  transitions.ts  virtualizer.svelte.ts  youtube.ts
src/: app.html  hooks.client.ts  style.css
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  MOBILE_OAUTH.md  build.rs  cloud_sync.config.example.json  tauri.android.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.ios.conf.json  tauri.prod.conf.json  tauri.staging.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/icons/prod/: icon.icns
src-tauri/icons/staging/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  proxy.rs
src-tauri/src/commands/: analysis.rs  app.rs  backup.rs  cloud_sync.rs  device.rs  diagnostics.rs  discovery.rs  export.rs  follow.rs  library.rs  media_controls.rs  mod.rs  native_preview.rs  playback.rs  playlist.rs  settings.rs  spike.rs  sync.rs  tag.rs
src-tauri/src/db/: key_provider.rs  mod.rs  schema.rs
src-tauri/src/db/key/: android.rs  file.rs  ios.rs  mod.rs
src-tauri/src/models/: backup.rs  cue.rs  device.rs  diagnostics.rs  discovery.rs  export.rs  follow.rs  mod.rs  playlist.rs  settings.rs  smart_rules.rs  tag.rs  track.rs
src-tauri/src/services/: analysis.rs  artwork.rs  audio.rs  backup.rs  device.rs  device_sync.rs  diagnostics.rs  discovery.rs  hash.rs  library.rs  media_controls.rs  mod.rs  playlist.rs  settings.rs  smart_rules.rs  sync.rs  tag.rs
src-tauri/src/services/audio/: fade.rs  mod.rs
src-tauri/src/services/cloud_sync/: config.rs  hlc.rs  mod.rs  resolution.rs  runtime.rs
src-tauri/src/services/cloud_sync/auth/: keychain.rs  mod.rs  oauth_flow.rs  provider.rs  token_store.rs
src-tauri/src/services/cloud_sync/auth/providers/: google.rs  mod.rs
src-tauri/src/services/cloud_sync/backend/: mock.rs  mod.rs  types.rs
src-tauri/src/services/cloud_sync/backend/firebase/: auth.rs  blobs.rs  devices.rs  listener.rs  manifest.rs  mod.rs  rest.rs
src-tauri/src/services/cloud_sync/backend/firebase/appcheck/: app_attest.rs  debug.rs  mod.rs  play_integrity.rs  rest.rs
src-tauri/src/services/cloud_sync/pipeline/: buckets.rs  dirty.rs  gc.rs  manifest.rs  mod.rs  pull.rs  push.rs  rows.rs
src-tauri/src/services/cloud_sync/pipeline/merge/: mod.rs  tests.rs  writers.rs
src-tauri/src/services/cloud_sync/tests/: convergence.rs  mod.rs
src-tauri/src/services/discovery/: audio_cache.rs  metadata.rs  mod.rs  n_transform.rs  release_crud.rs  release_ops.rs  stream_cache.rs  streams.rs
src-tauri/src/services/discovery/metadata/: bandcamp.rs  common.rs  discogs.rs  mod.rs  soundcloud.rs  tests.rs  youtube.rs
src-tauri/src/services/export/: anlz.rs  checkpoint.rs  cleanup.rs  collection.rs  copy.rs  generation.rs  helpers.rs  mod.rs  orchestration.rs  rekordbox.rs  state.rs  sync_diff.rs  validation.rs
src-tauri/src/services/export/anlz/: crypto.rs  error.rs  header.rs  mod.rs  utils.rs
src-tauri/src/services/export/anlz/tags/: mod.rs  pco2.rs  pcob.rs  ppth.rs  pqt2.rs  pqtz.rs  pssi.rs  pvbr.rs  pwav.rs  pwv2.rs  pwv3.rs  pwv4.rs  pwv5.rs  pwv6.rs  pwv7.rs  pwvc.rs
src-tauri/src/services/export/device_library_plus/: database.rs  encryption.rs  mod.rs  models.rs  schema.rs
src-tauri/src/services/export/pdb/: constants.rs  error.rs  ext_writer.rs  header.rs  index.rs  merger.rs  mod.rs  page.rs  reader.rs  strings.rs  types.rs  writer.rs
src-tauri/src/services/export/pdb/tables/: album.rs  artist.rs  color.rs  genre.rs  key.rs  menu.rs  mod.rs  playlist.rs  tag.rs  track.rs
src-tauri/src/services/follow/: crud.rs  diff.rs  mod.rs  watch.rs
src-tauri/src/services/media_controls/: mod.rs  noop.rs  souvlaki.rs
src-tauri/src/services/media_controls/ios/: audio_session.rs  engine.rs  mod.rs  now_playing.rs  observers.rs  player.rs  remote_command.rs
src-tauri/src/services/playlist/: crud.rs  mod.rs  movement.rs  releases.rs  smart.rs  tracks.rs
src/lib/api/: app.ts  (+16 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/: index.html
(+429 files in other folders)
