[package]
name = "crate-app"
version = "0.2.9"
description = "Cross-platform DJ library manager with music discovery, track analysis, and USB export"
authors = ["you"]
edition = "2021"
license-file = "../LICENSE"

[lib]
name = "crate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# No default features: every build selects its platform explicitly — desktop with
# `--features desktop`, mobile with `--features mobile`. `desktop` MUST NOT be a default
# feature: `tauri ios/android dev|build` has no `--no-default-features` flag and always
# inherits the crate's default features, so a desktop default leaks desktop-only deps
# (souvlaki, the native menu, rodio, …) into the iOS/Android build and breaks compilation.
default = []
# Desktop-only backend: audio playback, USB export, media keys, file import/analysis,
# native menu, and the window/process/updater plugins. Opt in with `--features desktop`.
desktop = [
  "dep:rodio",
  "dep:souvlaki",
  "dep:raw-window-handle",
  "dep:sysinfo",
  "dep:lofty",
  "dep:symphonia",
  "dep:stratum-dsp",
  "dep:binrw",
  "dep:base85",
  "dep:walkdir",
  "dep:tauri-plugin-window-state",
  "dep:tauri-plugin-process",
  "dep:tauri-plugin-updater",
]
# Mobile (iOS/Android) build feature. Pulls in mobile-only plugins (native web-auth for the OAuth
# sign-in flow); future mobile-only deps (e.g. the secure-store DB key provider, #134) attach here.
mobile = ["dep:tauri-plugin-web-auth"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-window-state = { version = "2.4.1", optional = true }
tauri-plugin-updater = { version = "2.10.0", optional = true }
tauri-plugin-process = { version = "2.3.1", optional = true }
tauri-plugin-notification = "2"
# Mobile-only: native OAuth via ASWebAuthenticationSession (iOS) / Custom Tabs (Android).
tauri-plugin-web-auth = { version = "1.0.0", optional = true }
souvlaki = { version = "0.8", optional = true }
raw-window-handle = { version = "0.6", optional = true }

# Database
rusqlite = { version = "0.38.0", features = ["bundled-sqlcipher-vendored-openssl"] }

# Audio (desktop-only: playback, decoding, metadata extraction)
rodio = { version = "0.21.1", optional = true }
symphonia = { version = "0.5.5", features = ["all"], optional = true }
lofty = { version = "0.22.4", optional = true }

# Audio analysis (desktop-only)
stratum-dsp = { version = "1.0", optional = true }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
binrw = { version = "0.14.1", optional = true }

# Async
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"

# Image processing
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp"] }

# Hashing
blake3 = "1.8.2"

# HTTP client + proxy server
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
axum = "0.7"

# Regex
regex = "1"

# Utilities
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
log = "0.4.29"
env_logger = "0.11.8"
walkdir = { version = "2.5.0", optional = true }
sysinfo = { version = "0.37.2", optional = true }

# Random
rand = "0.9"

# Encoding
base64 = "0.22"

# Device Library Plus key deobfuscation (flate2 also used by shared backup + cloud_sync)
flate2 = "1.0"
base85 = { version = "2.0", optional = true }

# Cloud sync (auth: PKCE S256 hashing)
sha2 = "0.10"

